--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Media Query</title>
     <!-- <link rel="stylesheet" href="media_query.css"> -->
 
     <style>
@@ -206,5 +206,6 @@
         </div>
     </main>
 </body>
+
 
 </html>
